src/test/ui/const-generics/const-param-before-other-params.min.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:5:21
   |
LL | fn bar<const X: u8, 'a>(_: &'a ()) {
   |       --------------^^- help: reorder the parameters: lifetimes, then types, then consts: `<'a, const X: u8>`

error: type parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:9:21
   |
LL | fn foo<const X: u8, T>(_: &T) {}
   |       --------------^- help: reorder the parameters: lifetimes, then types, then consts: `<T, const X: u8>`

error: aborting due to 2 previous errors

